# ata_antenna_weights_binary

./: README.md  meson.build
include/: antenna_weights.h  meson.build
src/: antenna_weights.c  meson.build
tests/: antenna_enumeration.c  antenna_weights.c  basic.c  meson.build  write_weights.py
